# sym

./: CMakeLists.txt  readme.md
cmake/: FindEigen.cmake
example/: CMakeLists.txt  test_000.cpp  test_001.cpp  test_002.cpp  test_eigen_000.cpp
include/sym/: as_extractor.hpp  binary_function.hpp  binary_function_impl.hpp  calculation_graph.hpp  cxx_code_printer.hpp  digraph.hpp  factory.hpp  factory_base.hpp  function.hpp  function_impl.hpp  io.hpp  md_extractor.hpp  repr.hpp  sym.hpp  sym_eigen.hpp  unary_function.hpp  unary_function_impl.hpp
test/: CMakeLists.txt  cpput.hpp  cpput_main.cpp  test_eigen.cpp  test_four_arithmetic_operations.cpp  test_simplify.cpp  test_trigonometric.cpp  test_unary.cpp
